--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT = 3003
 JWT_SECRET = "nguyenthang1306"
-JWT_EXPIRES_IN = 60 * 60 * 10
+JWT_EXPIRES_IN = "3h"
+MONGO_URL = "mongodb+srv://ndt13102003:3ukrD5RGwHiQoYb4@cluster0.auruhfh.mongodb.net/?retryWrites=true&w=majority"
