--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mssql": "^9.1.1",
     "nodemon": "^2.0.22",
     "sequelize": "^6.32.1",
+    "sequelize-msnodesqlv8": "^0.2.6-beta.8",
     "socket.io": "^4.6.2",
     "sqlite3": "^5.1.6"
   },
