--- a/.env
+++ b/.env
@@ -5,6 +5,6 @@ MONGO_URL = "mongodb+srv://ndt13102003:3ukrD5RGwHiQoYb4@cluster0.auruhfh.mongodb
 DB_USER = "Dev01"
 DB_PWD = "twist@01"
 DB_SERVER = "Wd.twistsoft.vn"
-# URL = "https://iot-server-4n22.onrender.com"
-URL = "http://localhost:3003"
+URL = "https://iot-server-4n22.onrender.com"
+# URL = "http://localhost:3003"
 
