--- a/.env
+++ b/.env
@@ -4,7 +4,6 @@ JWT_EXPIRES_IN = "3h"
 MONGO_URL = "mongodb+srv://ndt13102003:3ukrD5RGwHiQoYb4@cluster0.auruhfh.mongodb.net/?retryWrites=true&w=majority"
 DB_USER = "Dev01"
 DB_PWD = "twist@01"
-DB_SERVER = "Wd.twistsoft.vn"
-URL = "https://iot-server-4n22.onrender.com"
-# URL = "http://localhost:3003"
+DB_SERVER = "185.201.9.13"
+URL = "http://localhost:3003"
 
