--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-PORT = 3003
+PORT = 3004
 JWT_SECRET = "nguyenthang1306"
 JWT_EXPIRES_IN = "3h"
 MONGO_URL = "mongodb+srv://ndt13102003:3ukrD5RGwHiQoYb4@cluster0.auruhfh.mongodb.net/?retryWrites=true&w=majority"
 DB_USER = "Dev01"
 DB_PWD = "twist@01"
 DB_SERVER = "185.201.9.13"
-URL = "http://localhost:3003"
+URL = "https://iot-server-4n22.onrender.com"
 
